--- a/server.app/los.mobile/src/de/linogistix/mobile/processes/fuel/FuelBundle_en.properties
+++ b/server.app/los.mobile/src/de/linogistix/mobile/processes/fuel/FuelBundle_en.properties
@@ -7,6 +7,10 @@ ButtonMenu=Menu
 ButtonCancel=Cancel
 ButtonYes=Yes
 ButtonNo=No
+MsgEnterMat=Please enter material
+MsgMatNotFound=Material not found
+MsgMatAdviceMandatory=Advice is mandatory for this material
+TitleEnterAmount=Amount
 MEXRIEDW=MEXRIEDW
 TitleEnterMat=GR: Material
 TitleConfirmAmount=GR: Amount
@@ -16,7 +20,6 @@ TitleEnterUlNo=GR: Unit Load
 TitleEnterLoc=GR: Target Location
 TitleEnterTargetUl=GR: Target UL
 TitleEnterUlType=GR: Unit Load Type
-TitleEnterAmount=GR: Amount
 TitleEnterLot=GR: Lot
 TitleEnterSerial=GR: Serial-No.
 TitleGRDirect=Goods Receipt & Storage
@@ -70,9 +73,6 @@ MsgEnterUl=Please enter unit load
 MsgUlNotAccessable=Unit load not accessable
 MsgUlNotFound=Unit load not found
 MsgAdviceNotLoaded=Advice not loaded
-MsgEnterMat=Please enter material
-MsgMatNotFound=Material not found
-MsgMatAdviceMandatory=Advice is mandatory for this material
 MsgClientNotValid=The client is not selected
 MsgMatNotValid=The material is not selected
 MsgUlTypeNotValid=The unit load type is not selected
